--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Jest Marmot Test App",
   "repository": "git@github.com:axehomeyg/jest-marmot-test-app.git",
   "author": "Michael Cerna <cerna5150@yahoo.com>",
-  "dependencies": {
-    "jest-marmot": "^1.0.21"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
@@ -14,17 +12,20 @@
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-add-module-exports": "^1.0.2",
-    "eslint": "^5.15.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-jest": "^22.7.0",
+    "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "jest": "^24.1.0",
-    "jsdom": "^15.1.1",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "jest": "^25.1.0",
+    "jest-marmot": "^1.0.24",
+    "jsdom": "^16.0.1",
     "jsdom-global": "^3.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
